--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- React and ReactDOM from CDN -->
+<script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
@@ -10,6 +14,29 @@
   <div id="experience">
     <canvas id="experience-canvas"></canvas>
   </div>
+
+  <div class="modal">
+    <div class="modal-wrapper">
+      <div class="modal-header">
+        <div class="modal-title">
+          <button class="modal-ext">Exit</button>
+          <div class="modal-content">
+          <div class="modal-content-wrapper">
+            <a class="modal-visit">Click Me!</a>
+            <div class="modal-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi asperiores rem nulla minus nostrum praesentium placeat optio, eos deleniti officia porro neque accusamus amet magnam est, ut consequuntur possimus vitae!
+            Qui voluptatibus, quasi, nihil minima facere mollitia quidem pariatur ad laudantium ea maxime voluptates dolores dicta soluta. Earum, sequi laboriosam amet quam tempore nihil ab distinctio quisquam. Sequi, vero sunt.
+            Suscipit sapiente nemo quidem nihil laboriosam, libero sint quam id! Voluptas culpa quis, porro vero omnis, laudantium tempore nemo quas sit consequatur facilis ipsa, aspernatur sequi. Sunt error deleniti assumenda.
+            Dolor, quam necessitatibus voluptatum, labore magni veniam non molestiae incidunt mollitia ex at repellendus facilis excepturi. Iure corporis id nesciunt! Fuga ex alias dicta reiciendis eos beatae suscipit quibusdam sequi!</div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
   <script type="importmap">
     {
       "imports": {
