--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <div id="experience">
     <canvas id="experience-canvas"></canvas>
   </div>
-  
+  <div class="return" >
+  <button class="Rbutton" id="return">Return</button></div>
     <div class="modal" id="Resume">
       <div class="modal-wrapper">
         <div class="modal-header">
@@ -32,6 +33,7 @@
       </div>
     </div>
     </div>
+<div class="footer">&copy; All rights reserved - sarabsharat </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
 <!-- 
 
