--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <!-- DONE 🚨 -->
   <div class="modal" id="Cresume-modal">
+    <div class="mcontent">
       <div class="modal-header">Resume
       </div>
         <div class="modal-title">Download My CV here!
@@ -34,7 +35,7 @@
               download</a>
           </div>
         </div>
-        <iframe src="/SaraIbsharat-CV.pdf" width="100%" height="600px"></iframe>
+        <iframe src="/SaraIbsharat-CV.pdf" width="100%" height="600px"></iframe></div>
     </div>
 <!-- DONE 🚨 -->
 
@@ -56,7 +57,7 @@
       <div class="content-section" id="blog-content">
         <h1 class="modal-header">Blog</h1>
         <div class="content-body">
-          <!-- DLKJGLDSDJHGS -->
+         <p>I built a <strong>blog</strong> for <strong>Dr. Mohammad Bsharat</strong> with a clean admin dashboard and <strong>easy-to-use</strong> post submission features. Users can create posts and organize them into <strong>categories</strong>, while the admin dashboard lets Dr. Bsharat manage and publish content effortlessly. Though the blog isn't online right now, it’s a solid example of my ability to create interactive websites with <strong>user-friendly</strong> functionality and efficient content management.</p>
         </div>
       </div>
       <div class="content-section" id="mun-content">
@@ -214,8 +215,8 @@
       <div class="modal-content">
         <div class="talk">
           <ul>
-              <li><span>Yazan Abu Taa</span>: Blaa.</li>
-              <li><span>Mais Awad</span>: "Sara has always had such a business-like approach towards everything that she undertook".</li>
+              <li><span>Yazan Abu Taa</span>: Blaa.<div class="modal-description">Tech Lead at NXGEN</div></li>
+              <li><span>Mais Awad</span>: "Sara has always had such a business-like approach towards everything that she undertook".<div class="modal-description">High School Teacher at IEC</div></li>
                </ul>
       </div> 
       <div class="modal-description">*Note: Recommendation letter available upon request!📝
